--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Gif加载动画比Xutils3自带的流畅
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'org.xutils:xutils:3.3.40'
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
-    //Gif加载动画比Xutils3自带的流畅
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.4'
     compile 'com.google.code.gson:gson:2.8.0'
+    testCompile 'junit:junit:4.12'
+    //对话框的展示（实现底部可向上拉到动画）
+    compile 'com.orhanobut:dialogplus:1.11@aar'
+
 }
