--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
-
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="design_width"
             android:value="768" />
@@ -62,11 +61,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity"></activity>
-        <activity android:name=".activity.ForgetPassWordActivity"></activity>
-        <activity android:name=".activity.OwnerMainActivity"></activity>
-        <activity android:name=".activity.SettingActivity"></activity>
-
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.ForgetPassWordActivity" />
+        <activity android:name=".activity.OwnerMainActivity" />
+        <activity android:name=".activity.SettingActivity" />
+        <activity android:name=".activity.AboutActivity" />
+        <activity android:name=".activity.HelpCenterActivity" />
     </application>
 
 </manifest>
