--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".activity.ShipperCertificationActivity" />
         <activity android:name=".activity.EditextActivity" />
         <activity android:name=".activity.PhoneActivity" />
+        <activity android:name=".activity.IdCardActivity" />
     </application>
 
 </manifest>
