--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //对话框的展示（实现底部可向上拉到动画）
     compile 'com.orhanobut:dialogplus:1.11@aar'
+    compile 'com.contrarywind:Android-PickerView:3.2.1'
+
 
 }
