--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.orhanobut:dialogplus:1.11@aar'
     compile 'com.contrarywind:Android-PickerView:3.2.1'
     compile project(':pullToRefreshLibrary')
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
