--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
         <activity android:name=".activity.GoodsDetailsActivity" />
         <activity android:name=".activity.RouteShowActivity" />
         <activity android:name=".activity.QCodeActivity" />
+        <activity android:name=".activity.CarDetailsActivity" />
     </application>
 
 </manifest>
